--- a/index.html
+++ b/index.html
@@ -361,14 +361,14 @@
         const VAT_RATE = 0.18; // 💙 כאן מעדכנים את שיעור המע"מ
         const productData = {
             pharmacy: [
-                {id: 'quantity14', name: 'בדיקה לאבחון שפעת + קורונה',price: 24,sku:'7290019098546', bulkPrice: 20, bulkThreshold:1},
+                {id: 'quantity14', name: 'בדיקה לאבחון שפעת + קורונה',price: 24, bulkPrice: 20, bulkThreshold:1,sku:'7290019098546'},
                 {id: 'quantity1', name: 'פורמט עט - NO STEP בדיקות דלקת גרון', price: 19.90, bulkPrice: 17.90, bulkThreshold:100,sku:'7290013882080'},
                 {id: 'quantity2', name: 'STREP T בדיקה לדלקת גרון', price: 13.90, bulkPrice: 12.90, bulkThreshold:100,sku:'7290008123723},
                 {id: 'quantity3', name: 'A + B בדיקה לשפעת - פורמט עט' , price: 19.90,bulkPrice: 17.90, bulkThreshold:1,sku:'7290013882165'},
                 {id: 'quantity4', name: 'בדיקת הריון 1', price: 5.20,sku:'7290013882097'},
                 {id: 'quantity5', name: 'בדיקת הריון 2', price: 6.50,sku:'7290013882103'},
                 {id: 'quantity13', name: '"בדיקת הריון "בשעה טובה', price: 18.90,sku:'7290013882172-7'},
-                {id: 'quantity6', name: 'בדיקה לדלקת בשתן', price: 13.90, sku:'7290013882035',bulkPrice: 10, bulkThreshold:1,sku:'7290013882035'},
+                {id: 'quantity6', name: 'בדיקה לדלקת בשתן', price: 13.90, ,bulkPrice: 10, bulkThreshold:1,sku:'7290013882035'},
                 {id: 'quantity7', name: 'בדיקת קנדידה וגינאלית',price: 17.20, bulkPrice: 10, bulkThreshold:1,sku:'7290013882042'},
                 {id: 'quantity8', name: 'בדיקת סמים 8 פרמטרים',price: 33.90,sku:'7290013882127'},
                 {id: 'quantity9', name: 'בדיקה לגילוי דם סמוי בצואה',price: 24.90,sku:'7290013882066'},
@@ -393,14 +393,14 @@
                 {id: 'quantity13', name: 'בדיקת סמים 8 פרמטרים',price: 33.90,sku:'7290013882127'}
             ],
             shrem_pharmacy: [
-                {id: 'quantity14', name: 'בדיקה לאבחון שפעת + קורונה',price: 24,sku:'7290019098546', bulkPrice: 20, bulkThreshold:1},
+                {id: 'quantity14', name: 'בדיקה לאבחון שפעת + קורונה',price: 24, bulkPrice: 20, bulkThreshold:1,sku:'7290019098546'},
                 {id: 'quantity1', name: 'פורמט עט - NO STEP בדיקות דלקת גרון', price: 19.90, bulkPrice: 17.90, bulkThreshold:100,sku:'7290013882080'},
                 {id: 'quantity2', name: 'STREP T בדיקה לדלקת גרון', price: 13.90, bulkPrice: 12.90, bulkThreshold:100,sku:'7290008123723},
                 {id: 'quantity3', name: 'A + B בדיקה לשפעת - פורמט עט' , price: 19.90,bulkPrice: 17.90, bulkThreshold:1,sku:'7290013882165'},
                 {id: 'quantity4', name: 'בדיקת הריון 1', price: 5.20,sku:'7290013882097'},
                 {id: 'quantity5', name: 'בדיקת הריון 2', price: 6.50,sku:'7290013882103'},
                 {id: 'quantity13', name: '"בדיקת הריון "בשעה טובה', price: 18.90,sku:'7290013882172-7'},
-                {id: 'quantity6', name: 'בדיקה לדלקת בשתן', price: 13.90, sku:'7290013882035',bulkPrice: 10, bulkThreshold:1,sku:'7290013882035'},
+                {id: 'quantity6', name: 'בדיקה לדלקת בשתן', price: 13.90,bulkPrice: 10, bulkThreshold:1,sku:'7290013882035'},
                 {id: 'quantity7', name: 'בדיקת קנדידה וגינאלית',price: 17.20, bulkPrice: 10, bulkThreshold:1,sku:'7290013882042'},
                 {id: 'quantity8', name: 'בדיקת סמים 8 פרמטרים',price: 33.90,sku:'7290013882127'},
                 {id: 'quantity9', name: 'בדיקה לגילוי דם סמוי בצואה',price: 24.90,sku:'7290013882066'},
@@ -597,6 +597,7 @@
 
 </body>
 </html>
+
 
 
 
