--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                 {id: 'quantity4', name: 'בדיקת הריון 1', price: 5.20,sku:'7290013882097'},
                 {id: 'quantity5', name: 'בדיקת הריון 2', price: 6.50,sku:'7290013882103'},
                 {id: 'quantity13', name: '"בדיקת הריון "בשעה טובה', price: 18.90,sku:'7290013882172-7'},
-                {id: 'quantity6', name: 'בדיקה לדלקת בשתן', price: 13.90, ,bulkPrice: 10, bulkThreshold:1,sku:'7290013882035'},
+                {id: 'quantity6', name: 'בדיקה לדלקת בשתן', price: 13.90, bulkPrice: 10, bulkThreshold:1,sku:'7290013882035'},
                 {id: 'quantity7', name: 'בדיקת קנדידה וגינאלית',price: 17.20, bulkPrice: 10, bulkThreshold:1,sku:'7290013882042'},
                 {id: 'quantity8', name: 'בדיקת סמים 8 פרמטרים',price: 33.90,sku:'7290013882127'},
                 {id: 'quantity9', name: 'בדיקה לגילוי דם סמוי בצואה',price: 24.90,sku:'7290013882066'},
@@ -597,6 +597,7 @@
 
 </body>
 </html>
+
 
 
 
