--- a/index.html
+++ b/index.html
@@ -483,9 +483,9 @@
         function updateImage() {
             const placeType = placeTypeSelect.value;
             const images = {
-                pharmacy: 'טופס הזמנה מרץ פרטיים.jpg',
+                pharmacy: 'טופס הזמנה 09-25 פרטיים.png',
                 future_pharmacy: 'טופס הזמנה 09-25  רוקחים עתיד.png',
-                shrem_pharmacy: 'טופס הזמנה מרץ פרטיים.jpg'
+                shrem_pharmacy: 'טופס הזמנה 09-25 פרטיים.png'
             };
 
             if (placeType && images[placeType]) {
@@ -601,4 +601,5 @@
 
 </body>
 </html>
+
 
