--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
             const placeType = placeTypeSelect.value;
             const images = {
                 pharmacy: 'טופס הזמנה 09-25 פרטיים.png',
-                future_pharmacy: 'טופס הזמנה 09-25  רוקחים עתיד.png',
+                future_pharmacy: 'טופס הזמנה 09-25  רוקחים עתיד.jpg',
                 shrem_pharmacy: 'טופס הזמנה 09-25 פרטיים.png'
             };
 
@@ -601,5 +601,6 @@
 
 </body>
 </html>
+
 
 
