--- a/index.html
+++ b/index.html
@@ -483,9 +483,9 @@
         function updateImage() {
             const placeType = placeTypeSelect.value;
             const images = {
-                pharmacy: 'טופס הזמנה 09-25 פרטיים.png',
+                pharmacy: 'טופס הזמנה 09-25 פרטיים.jpg',
                 future_pharmacy: 'טופס הזמנה 09-25  רוקחים עתיד.jpg',
-                shrem_pharmacy: 'טופס הזמנה 09-25 פרטיים.png'
+                shrem_pharmacy: 'טופס הזמנה 09-25 פרטיים.jpg'
             };
 
             if (placeType && images[placeType]) {
@@ -601,6 +601,7 @@
 
 </body>
 </html>
+
 
 
 
