--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                 {id: 'quantity3', name: 'A + B בדיקה לשפעת - פורמט עט', sku: '7290013882165', price: 19.90},
                 {id: 'quantity4', name: 'בדיקת הריון 1', sku: '7290013882097', price: 5.20},
                 {id: 'quantity5', name: 'בדיקת הריון 2', sku: '7290013882103', price: 6.50},
-                {id: 'quantity13', name: '"בדיקת הריון "בשעה טובה', sku: '7290013882172-7', price: 18.90},
+                {id: 'quantity13', name: 'בדיקת הריון "בשעה טובה"', sku: '7290013882172-7', price: 18.90},
                 {id: 'quantity6', name: 'בדיקה לדלקת בשתן', sku: '7290013882035', price: 13.90},
                 {id: 'quantity7', name: 'בדיקת קנדידה וגינאלית', sku: '7290013882042', price: 17.20},
                 {id: 'quantity8', name: 'בדיקת סמים 8 פרמטרים', sku: '7290013882127', price: 33.90},
@@ -601,6 +601,7 @@
 
 </body>
 </html>
+
 
 
 
