--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                 {id: 'quantity9', name: 'בדיקה לגילוי דם סמוי בצואה', sku: '7290013882066', price: 24.90},
                 {id: 'quantity10', name: 'בדיקה לאבחון וירוס הקורונה', sku: '7290019098409', price: 30.00},
                 {id: 'quantity11', name: 'בדיקת ביוץ - 7 באריזה', sku: '7290013882028-7', price: 21.00},
-                {id: 'quantity12', name: '"בדיקת ביוץ "בשעה טובה', sku: '7290013882073-12', price: 29.90},
+                {id: 'quantity12', name: 'בדיקת ביוץ "בשעה טובה"', sku: '7290013882073-12', price: 29.90},
             ],
             future_pharmacy: [
                 {id: 'quantity14', name: 'בדיקה לאבחון שפעת + קורונה', sku: '7290019098546', price: 24},
@@ -387,7 +387,7 @@
                 {id: 'quantity3', name: 'A + B בדיקה לשפעת - פורמט עט', sku: '7290013882165', price: 19.90},
                 {id: 'quantity4', name: 'בדיקת הריון 1 - רוקחים עתיד', sku: '7290013882134', price: 2.90},
                 {id: 'quantity5', name: 'בדיקת הריון 2 - רוקחים עתיד', sku: '7290013882196', price: 5.20},
-                {id: 'quantity6', name: '"בדיקת הריון "בשעה טובה', sku: '7290013882172-7', price: 18.90},
+                {id: 'quantity6', name: 'בדיקת הריון "בשעה טובה"', sku: '7290013882172-7', price: 18.90},
                 {id: 'quantity7', name: '"בדיקת ביוץ "בשעה טובה', sku: '7290013882073-12', price: 29.90},
                 {id: 'quantity8', name: 'בדיקת ביוץ 7 באריזה', sku: '7290013882028-7', price: 21.00},
                 {id: 'quantity9', name: 'בדיקה לדלקת בשתן', sku: '7290013882035', price: 13.90},
@@ -403,14 +403,14 @@
                 {id: 'quantity3', name: 'A + B בדיקה לשפעת - פורמט עט', sku: '7290013882165', price: 19.90},
                 {id: 'quantity4', name: 'בדיקת הריון 1', sku: '7290013882097', price: 5.20},
                 {id: 'quantity5', name: 'בדיקת הריון 2', sku: '7290013882103', price: 6.50},
-                {id: 'quantity13', name: '"בדיקת הריון "בשעה טובה', sku: '7290013882172-7', price: 18.90},
+                {id: 'quantity13', name: 'בדיקת הריון "בשעה טובה"', sku: '7290013882172-7', price: 18.90},
                 {id: 'quantity6', name: 'בדיקה לדלקת בשתן', sku: '7290013882035', price: 13.90},
                 {id: 'quantity7', name: 'בדיקת קנדידה וגינאלית', sku: '7290013882042', price: 17.20},
                 {id: 'quantity8', name: 'בדיקת סמים 8 פרמטרים', sku: '7290013882127', price: 33.90},
                 {id: 'quantity9', name: 'בדיקה לגילוי דם סמוי בצואה', sku: '7290013882066', price: 24.90},
                 {id: 'quantity10', name: 'בדיקה לאבחון וירוס הקורונה', sku: '7290019098409', price: 30.00},
                 {id: 'quantity11', name: 'בדיקת ביוץ - 7 באריזה', sku: '7290013882028-7', price: 21.00},
-                {id: 'quantity12', name: '"בדיקת ביוץ "בשעה טובה', sku: '7290013882073-12', price: 29.90},
+                {id: 'quantity12', name: 'בדיקת ביוץ "בשעה טובה"', sku: '7290013882073-12', price: 29.90},
             ]
         };
         
@@ -601,6 +601,7 @@
 
 </body>
 </html>
+
 
 
 
